// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Info of caught pokemon 1`] = `
Array [
  <img
    alt="Ivysaur"
    className="page__img"
    src="test-file-stub"
  />,
  <article
    className="page__info info"
  >
    <h1
      className="info__title"
    >
      Ivysaur
    </h1>
    <p
      className="info__text"
    >
      ID: 
      <span
        className="info__data"
      >
        2
      </span>
    </p>
    <p
      className="info__text"
    >
      STATUS: 
      <span
        className="info__data"
      >
        Caught
      </span>
    </p>
    <p
      className="info__text"
    >
      CAUGHT: 
      <span
        className="info__data"
      >
        23 June 2021
      </span>
    </p>
    <button
      className="card__button button button--checked"
      onClick={[Function]}
      type="button"
    >
      Release
    </button>
  </article>,
]
`;

exports[`Render Info of uncaught pokemon 1`] = `
Array [
  <img
    alt="Bulbasaur"
    className="page__img"
    src="test-file-stub"
  />,
  <article
    className="page__info info"
  >
    <h1
      className="info__title"
    >
      Bulbasaur
    </h1>
    <p
      className="info__text"
    >
      ID: 
      <span
        className="info__data"
      >
        1
      </span>
    </p>
    <p
      className="info__text"
    >
      STATUS: 
      <span
        className="info__data"
      >
        Not caught
      </span>
    </p>
    <button
      className="card__button button"
      onClick={[Function]}
      type="button"
    >
      Catch!
    </button>
  </article>,
]
`;
